<resources>
    <string name="app_name">Mue Chat</string>
    <string name="sign_in">SIGN IN</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="sign_up_with_phone">Sign Up With Phone</string>
    <string name="click_for_signup">Click for Signup</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prabhakar_rao">PRABHAKAR RAO</string>
    <string name="todo" />
</resources>